Salesforce/main/default/main/default/objects/Order/fields/Pai__c.field-meta.xml
<CustomField>
    <fullName>Pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pedido padre</description>
    <label>Número da Oferta Subsequente</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Filho</relationshipName>
    <type>Lookup</type>
</CustomField>