Salesforce/main/default/main/default/objects/Order/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>