Salesforce/main/default/main/default/objects/Order/listViews/Todoslospedidos.listView-meta.xml
<ListView>
    <fullName>Todoslospedidos</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Numero_Pedido_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los pedidos</label>
</ListView>