Salesforce/main/default/main/default/objects/Order/listViews/Todoslospedidospreliminares.listView-meta.xml
<ListView>
    <fullName>Todoslospedidospreliminares</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>Todos los pedidos preliminares</label>
</ListView>